--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -5,8 +5,9 @@ webdriver {
 headless.mode = true
 
 serenity {
-    take.screenshots = FOR_FAILURES
+    take.screenshots = AFTER_EACH_STEP
 }
+
 #
 # Chrome options can be defined using the chrome.switches property
 #
